--- a/amvera.yml
+++ b/amvera.yml
@@ -8,6 +8,6 @@ build:
     target/*.jar: /
   args: 'spring-boot:repackage '
 run:
-  jarName: CallBack_vk-0.0.1-SNAPSHOT.jar
+  jarName: vkBotMoney-0.0.1-SNAPSHOT.jar
   persistenceMount: /data
   containerPort: 8888
